[package]
name = "Register"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winreg = "0.8"
rust-embed="6.3.0"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"